# twitter-osu-markov-bot

./: .env.example  .gitignore  Cargo.toml  README.md  Secrets_example.toml
.github/workflows/: build-linux.yaml  project.yaml  rust.yml
src/: main.rs  markov_chain.rs  utils.rs
